# RallySegmenter

./: .gitignore  README.md  Rallysegmenter.py  analyze_rally_params.py  court_roi.json  cut_segments.py  pyproject.toml
configs/: default.yml
rally_segmenter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: features_to_smooth_segments.py  make_features_windowed_from_smooth.py  make_window_features.py  predict_play_lgbm.py  read.txt  smooth_csv_to_segments.py  smooth_play_score.py  train_play_lgbm.py
stats/: play_lgbm_model.txt
trc/: config.py  fuse.py  overlay.py
trc/cli/: eval.py  segment.py
trc/eval/: match.py  metrics.py
trc/features/: audio.py  motion.py  pose.py
trc/segment/: hysteresis.py
